syntax = "proto3";

package api.ibkr.order.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/majidmvulle/ibkr-client/proto/gen/go/api/ibkr/order/v1;orderv1";

// OrderService handles order management operations.
service OrderService {
  // PlaceOrder places a new order.
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
  
  // ModifyOrder modifies an existing order.
  rpc ModifyOrder(ModifyOrderRequest) returns (ModifyOrderResponse);
  
  // CancelOrder cancels an existing order.
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  
  // GetOrder retrieves order details.
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  
  // ListOrders lists orders for an account.
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

// PlaceOrderRequest contains parameters for placing an order.
message PlaceOrderRequest {
  string account_id = 1 [(buf.validate.field).string.min_len = 1];
  string symbol = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 20
    pattern: "^[A-Z0-9]+$"
  }];
  OrderSide side = 3 [(buf.validate.field).enum = {
    defined_only: true
    not_in: [0]
  }];
  OrderType type = 4 [(buf.validate.field).enum = {
    defined_only: true
    not_in: [0]
  }];
  double quantity = 5 [(buf.validate.field).double.gt = 0];
  optional double limit_price = 6 [(buf.validate.field).double.gt = 0];
  optional double stop_price = 7 [(buf.validate.field).double.gt = 0];
  TimeInForce time_in_force = 8 [(buf.validate.field).enum = {
    defined_only: true
    not_in: [0]
  }];
}

// PlaceOrderResponse contains the result of placing an order.
message PlaceOrderResponse {
  string order_id = 1;
  OrderStatus status = 2;
  string message = 3;
}

// ModifyOrderRequest contains parameters for modifying an order.
message ModifyOrderRequest {
  string account_id = 1 [(buf.validate.field).string.min_len = 1];
  string order_id = 2 [(buf.validate.field).string.min_len = 1];
  optional double quantity = 3 [(buf.validate.field).double.gt = 0];
  optional double limit_price = 4 [(buf.validate.field).double.gt = 0];
  optional double stop_price = 5 [(buf.validate.field).double.gt = 0];
}

// ModifyOrderResponse contains the result of modifying an order.
message ModifyOrderResponse {
  string order_id = 1;
  OrderStatus status = 2;
  string message = 3;
}

// CancelOrderRequest contains parameters for canceling an order.
message CancelOrderRequest {
  string account_id = 1 [(buf.validate.field).string.min_len = 1];
  string order_id = 2 [(buf.validate.field).string.min_len = 1];
}

// CancelOrderResponse contains the result of canceling an order.
message CancelOrderResponse {
  string order_id = 1;
  OrderStatus status = 2;
  string message = 3;
}

// GetOrderRequest contains parameters for retrieving an order.
message GetOrderRequest {
  string account_id = 1 [(buf.validate.field).string.min_len = 1];
  string order_id = 2 [(buf.validate.field).string.min_len = 1];
}

// GetOrderResponse contains order details.
message GetOrderResponse {
  Order order = 1;
}

// ListOrdersRequest contains parameters for listing orders.
message ListOrdersRequest {
  string account_id = 1 [(buf.validate.field).string.min_len = 1];
  optional OrderStatus status_filter = 2;
  optional int32 limit = 3 [(buf.validate.field).int32 = {
    gte: 1
    lte: 1000
  }];
}

// ListOrdersResponse contains a list of orders.
message ListOrdersResponse {
  repeated Order orders = 1;
}

// Order represents an order.
message Order {
  string order_id = 1;
  string account_id = 2;
  string symbol = 3;
  OrderSide side = 4;
  OrderType type = 5;
  double quantity = 6;
  double filled_quantity = 7;
  optional double limit_price = 8;
  optional double stop_price = 9;
  TimeInForce time_in_force = 10;
  OrderStatus status = 11;
  string created_at = 12;
  optional string updated_at = 13;
}

// OrderSide represents the side of an order.
enum OrderSide {
  ORDER_SIDE_UNSPECIFIED = 0;
  ORDER_SIDE_BUY = 1;
  ORDER_SIDE_SELL = 2;
}

// OrderType represents the type of an order.
enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_MARKET = 1;
  ORDER_TYPE_LIMIT = 2;
  ORDER_TYPE_STOP = 3;
  ORDER_TYPE_STOP_LIMIT = 4;
}

// OrderStatus represents the status of an order.
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_SUBMITTED = 2;
  ORDER_STATUS_FILLED = 3;
  ORDER_STATUS_PARTIALLY_FILLED = 4;
  ORDER_STATUS_CANCELLED = 5;
  ORDER_STATUS_REJECTED = 6;
}

// TimeInForce represents how long an order remains active.
enum TimeInForce {
  TIME_IN_FORCE_UNSPECIFIED = 0;
  TIME_IN_FORCE_DAY = 1;
  TIME_IN_FORCE_GTC = 2;
  TIME_IN_FORCE_IOC = 3;
  TIME_IN_FORCE_FOK = 4;
}
